feat(fixes): Se agregan nuevas palabras a la traduccion del idioma i18n, mejoramiento de ui, tiempos de carga y tamanos de imagenes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -9,20 +9,6 @@
   "ABOUTME": {
     "ABOUT_TITLE": "About me",
     "ABOUT_ABOUT_DESCRIPTION": "I am a web developer specialized in creating complete applications from interface design to logic implementation on the server. I have experience in databases and application deployment, ensuring optimal performance and a smooth user experience. Additionally, I have mastered version control through Git and use Power BI for data analysis, allowing me to make informed decisions based on metrics.",
-    "ABOUT_EXPIRENCE": [
-      {
-        "EXPIRENCE": "Years",
-        "EXPIRENCE_ABOUT": "of experience"
-      },
-      {
-        "PROJECTS": "Projects",
-        "PROJECTS_ABOUT": "completed"
-      },
-      {
-        "WORKING": "Working",
-        "WORKING_ABOUT": "in companies"
-      }
-    ],
     "ABOUT_DOWNLOAD_CV": "See CV",
     "ABOUT_TITLE_CARD": "Information Technology Engineer. Full-Stack Developer.",
     "ABOUT_SUBTITLE": "Autonomous",
@@ -35,10 +21,11 @@
     "EDUCATION_TITLE": "Education"
   },
   "PROJECTS": {
-    "PROJECTS_TITLE": "Projects",
-    "PROJECTS_TITLE_BUSIN": "Business projects",
-    "PROJECTS_VIEW": "See project",
-    "PROJECTS_MODAL_TITLE": "Image gallery"
+    "PROJECTS_TITLE_BUTTON_F": "Frontend",
+    "PROJECTS_TITLE_BUTTON_B": "Backend",
+    "PROJECTS_TITLE_BUTTON_C": "Companies",
+    "PROJECTS_TITLE_BUTTON_D": "Data analysis",
+    "PROJECTS_BADGE_FORK": "Collaboration"
   },
   "404": {
     "404_BODY": "Oops! The page you're looking for isn't in orbit yet. Please come back later."
