--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -44,7 +44,7 @@
     "OPINIONS_NOT_FOUND_DESCRIPTION": "Upps! aun no hay nada por aqui ni nada por alla, pronto veras algo aquí",
 
     "OPINIONS_FORM_TITLE": " Escribe una opinión",
-    "OPINIONS_FORM_SUBTITLE": "Tu feedback es valioso para seguir creciendo como desarrollador",
+    "OPINIONS_FORM_SUBTITLE": "Puedes compartir una experiencia que hayas tenido trabajando conmigo, tu opinión sobre mi trabajo o incluso algún detalle que consideres importante mencionar, ¡me ayudaria mucho a seguir creciendo como desarrollador!",
 
     "OPINIONS_FORM_NAME_PLACEHOLDER": "Tu nombre completo",
     "OPINIONS_FORM_JOB_PLACEHOLDER": "Ej: Desarrollador Frontend",
