feat(breaking_changes_to_backend): Se consume ahora la api del backend y se trae los datos desde alla

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -44,7 +44,7 @@
     "OPINIONS_NOT_FOUND_DESCRIPTION": "Oops! Nothing here or there yet. You'll see something here soon.",
 
     "OPINIONS_FORM_TITLE": "Write an opinion",
-    "OPINIONS_FORM_SUBTITLE": "You can share an experience you've had working with me, your opinion about my work, or even any details you think are important to mention. It would really help me to continue growing as a developer!",
+    "OPINIONS_FORM_SUBTITLE": "You can share an experience you've had working with me or an opinion about my work.",
 
     "OPINIONS_FORM_NAME_PLACEHOLDER": "Your full name",
     "OPINIONS_FORM_JOB_PLACEHOLDER": "e.g., Frontend Developer",
